Add main. Refactor tests.